// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _accessKey="V" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _accesskey="V" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          V
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input accesskey="V" aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _alert=true 1`] = `
<kol-input-range _alert="" _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _disabled=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _hint="Hint" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-describedby="id-nonce-hint" aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-range _hide-error="" _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _readOnly=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" _readonly="" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _shortKey="S" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _shortkey="S" _tooltipalign="top" class="range">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          S
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _accessKey="V" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _accesskey="V" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          V
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input accesskey="V" aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _alert=true 1`] = `
<kol-input-range _alert="" _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _disabled=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _hint="Hint" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-describedby="id-nonce-hint" aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-range _hide-error="" _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _readOnly=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" _readonly="" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _shortKey="S" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _shortkey="S" _tooltipalign="top" class="range">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          S
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _touched=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
          <option value="4"></option>
          <option value="5"></option>
          <option value="6"></option>
          <option value="7"></option>
          <option value="8"></option>
          <option value="9"></option>
          <option value="10"></option>
        </datalist>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _touched=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" class="kol-input-range">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="range">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
          <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
          <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
        </div>
      </div>
    </kol-input>
  </template>
</kol-input-range>
`;
